# CMFS

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  app.rc  compile.sh  pack.sh
doc/: CMFS架构设计.md  功能列表.md  发布说明.md  文件上场.md  时序图
include/: CConfig.hpp  CLog.h  Init.h
include/adapter/: CAdapterManager.h  CCtpMarketAdapter.h  CMockAdapter.h  CUDPAdapter.h  IAdapter.h
include/api/ctp/: ThostFtdcUserApiStruct.h
include/api/ctp_ext/: ctp_ext.h  ctp_ftdc_proto.h
include/api/udp_market/: GtjaMdStructV3.h  GtjaMdUserApi.h
include/apiWrapper/ctp/: MyCtpSpi.h  MyMarketApi.h  MyMarketSpi.h
include/biz/: CUserManagePlugin.h
include/bizData/: CMarketDataManager.h  CUserSessionManager.h
include/core/: BlockingConcurrentQueue.h  CBaseType.h  CByteOrder.h  CFlow.h  ConcurrentQueue.h  LockFreeRingQueue.h  OBEvent.h  baseheader.h  coredump.h  marco.h  mutex.h  plantformtools.h  singleton.h
include/core/cache/: CSSCache.h
include/ds/: CApiPathDefine.h  CDefine.h  bizDataStruct.h  bizDataType.h  common.h
include/interface/: IPlugin.h  IQueue.h
include/plugin/: CMarketDataManager.h  CMarketPlugin.h  CUserManagePlugin.h  CUserSessionManager.h
include/tcp/: CTcpServer.h  CTcpSession.h
include/test/: MyCtpApi.h  MyCtpSpi.h  MyMarketApi.h  MyMarketSpi.h
include/utils/: ProcSingletonCheck.h  Utils.h  nettrans.h
references/: ftd协议解析.vsdx
runtime/: Private.con  Public.con  QueryRsp.con  TradingDay.con  cmfs_test.out  start.sh  stop.sh  test  test_cache  test_market_data  test_md
runtime/config/: CtpInstrQryAddress.ini  authorized_users.csv  config.json  instruments.csv
runtime/monitor/: zabbix.json
src/: main.cpp
src/adapter/: CAdapterManager.cpp  CCtpMarketAdapter.cpp  CMockAdapter.cpp  CUDPAdapter.cpp
src/apiWrapper/ctp/: MyCtpSpi.cpp  MyMarketApi.cpp  MyMarketSpi.cpp
src/bizData/: CMarketDataManager.cpp  CUserSessionManager.cpp
src/core/: semaphore.cpp
src/plugin/: CMarketDataManager.cpp  CMarketPlugin.cpp  CUserManagePlugin.cpp  CUserSessionManager.cpp
src/tcp/: CTcpServer.cpp  CTcpSession.cpp
test/: InstrumentQryProcess.cpp  test_cache.cpp  test_marketdata.cpp  test_md_sub.h  test_suit.h  test_suit_md.h  test_suit_trade.h
test/ctp/: MyCtpApi.cpp  MyCtpSpi.cpp  MyMarketApi.cpp  MyMarketSpi.cpp
